[gd_scene load_steps=3 format=3 uid="uid://dy4tn78smgyh7"]

[ext_resource type="Theme" uid="uid://c7u2g7u3nqj0w" path="res://game/ui/theme/ui_theme.tres" id="1_k6yr1"]
[ext_resource type="Script" uid="uid://dyooufpf6yw1y" path="res://game/ui/game_menu/load_game_menu.gd" id="1_script"]

[node name="LoadGameMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_k6yr1")
script = ExtResource("1_script")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.07, 0.04, 0.92)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 120.0
offset_top = 10.0
offset_right = 520.0
offset_bottom = 300.0
theme_override_constants/separation = 6
alignment = 1

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Load Game"
horizontal_alignment = 1

[node name="AutosaveContainer" type="VBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 4

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(360, 180)
layout_mode = 2

[node name="SlotList" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 5

[node name="NewSlotButton" type="Button" parent="VBoxContainer"]
visible = false
custom_minimum_size = Vector2(140, 26)
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "+ New Slot"

[node name="BackButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(110, 26)
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Back"
